# my-data-engineering-zoomcamp

./: .gitignore  pyproject.toml  readme.md
2_docker_sql/: Dockerfile  ingest_data.py  notebook.ipynb  pipeline.py
