[project]
name = "my-data-engineering-zoomcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Fahlevi20",email = "rozakalfi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pgcli (>=4.2.0,<5.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
